BONUS: HTML/CSS/JS aggiunta score/win/lose

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </section>
         
         <section>
-            <h2 class="green-text"
-                >Numeri Utente 
+            <h2 class="green-text">
+                Player 1 
                 <i class="far fa-laugh-beam"></i>
             </h2>
             <ul class="numList green-text" id="numUser">
@@ -43,7 +43,7 @@
 
         <section>
             <h2 class="rose-text">
-                Numeri Computer <i class="fas fa-bomb"></i>
+                Computer <i class="fas fa-bomb"></i>
             </h2>
             <ul class="numList rose-text" id="numPC">
                 <li></li>
@@ -65,6 +65,9 @@
             </ul>
         </section>
 
+        <section>
+            <div id="winLosePoints"></div>
+        </section>
     </main>
 
     <script src="js/script.js"></script>
