BONUS: CSS aggiunta animazione radar ai separatori

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         </select>
     </header>
 
-    <div class="yellow-separator"></div>
+    <div class="yellow-separator">
+        <div class="animation-separator-blue"></div>
+        <div class="animation-separator"></div>
+    </div>
 
     <main>
         <section class="start">
@@ -77,7 +80,10 @@
             </ul>
         </section>
 
-        <div class="yellow-separator"></div>
+        <div class="yellow-separator">
+            <div class="animation-separator-blue"></div>
+            <div class="animation-separator"></div>
+        </div>
 
         <section>
             <div class="transition" id="winLosePoints"></div>
