BONUS: es. completamente funzionante con input HTML (NON Ottimizzato)

--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
                 Player 1 
                 <i class="far fa-laugh-beam"></i>
             </h2>
-            <ul class="numList green-text" id="numUser">
+            
+            <div class="number-in">
+                <input type="text" id="numeroUtente" placeholder="Inserisci un numero">
+                <button id="calcola" class="transition">Invia</button>
+            </div>
+            
 
+            <ul class="numList green-text" id="numUser">
             </ul>
         </section>
 
